kustomization/base/longhorn/ingressroute.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: longhorn-frontend-ingressroute
  namespace: default
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      services:
        - kind: Service
          name: longhorn-frontend
          namespace: longhorn-system
          port: 80
  tls:
    secretName: wildcard-hogs-tswn-us-secret
